更新關於我們

--- a/Desktop/關於我們/LOGO區.html
+++ b/Desktop/關於我們/LOGO區.html
@@ -5,16 +5,18 @@
                 <div id="logo-wrapper-phone" class="col-8 col-md-6">
                     <img class="shake-slow" src=" https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/734576452.png"
                         data-aos="zoom-in-up" style="padding: 25% 15%;" />
+                    <img class="person-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/853740025.png">
                 </div>
             </div>
         </div>
         <div class="logo-wrapper d-none d-xl-block">
             <img class="logo-icon shake-slow" src=" https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/734576452.png"
                 data-aos="zoom-in-up" />
+            <img class="person-icon" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/853740025.png">
         </div>
         <!-- Logo 含意說明 -->
         <img class="logo-description d-none" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/639955965.png" />
-        <p class="logo-temp-text d-none d-xl-block">
+        <p class="logo-temp-text d-none d-xl-block" data-aos="zoom-in">
             大學社會責任實踐 ,<br>
             University Social Responsibility , 簡稱 USR。<br>
             USR成立是為了實踐社會責任 , <br>
@@ -22,14 +24,14 @@
             幫助社會大眾 , <br>
             共同營造美好的未來 !
         </p>
-        <p class="logo-text d-none d-xl-block">LOGO 理 念</p>
+        <p class="logo-text d-none d-xl-block animate__animated animate__jello">LOGO 理 念</p>
     </div>
 </section>
 <style type="text/css">
     #logo-container {
         margin-top: 350px;
-        height: 1095px;
-        background-image: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/104916399.png)
+        height: 735px;
+        background-image: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3335/610905850.png)
     }
 
     #logo-wrapper-phone {
@@ -37,7 +39,7 @@
         justify-content: center;
         box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.16);
         background: white;
-        margin-top: 25%;
+        margin-top: 8%;
     }
 
     .logo-wrapper {
@@ -45,7 +47,7 @@
         height: 454px;
         position: absolute;
         top: -83px;
-        left: 401px;
+        left: 1065px;
         box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.16);
         background: white;
     }
@@ -56,16 +58,25 @@
         margin: 131px 77px;
     }
 
-    .logo-description {
+    .person-icon {
         position: absolute;
-        top: 96px;
-        right: 330px;
+        width: 50%;
+        top: 66%;
+        left: 59%;
+    }
+
+    @media (min-width: 1366px) {
+        .person-icon {
+            width: initial;
+            top: 293.3px;
+            left: 263px;
+        }
     }
 
     .logo-text {
         position: absolute;
-        top: 518px;
-        left: 510px;
+        top: 54px;
+        left: 402px;
         color: #4998b2;
         font-size: 45px;
         line-height: 1.33;
@@ -74,7 +85,7 @@
     .logo-temp-text {
         position: absolute;
         top: 165px;
-        left: 988px;
+        left: 402px;
         color: #000000;
         font-size: 30px;
         line-height: 2;
