更新 關於我們

--- a/Desktop/實踐成果/計畫成果.html
+++ b/Desktop/實踐成果/計畫成果.html
@@ -16,7 +16,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <a href="#">
+                    <a href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
                         <i class="fas fa-arrow-right text-more text-more-odd">
                             <span style="font-family: Arial; font-weight: normal;"> MORE</span>
                         </i>
@@ -40,7 +40,7 @@
         <div class="content-item-container" data-aos="fade-left">
             <div class="row">
                 <div class="col-lg-4">
-                    <a href="#">
+                    <a href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
                         <i class="fas fa-arrow-right text-more text-more-even">
                             <span style="font-family: Arial; font-weight: normal;"> MORE</span>
                         </i>
@@ -49,11 +49,11 @@
                 <div class="col-lg-8">
                     <div class="d-flex flex-row">
                         <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/322929631.png" alt="成果照片"
+                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/368922643.png" alt="成果照片"
                                 class="rounded">
                         </div>
                         <div class="p-2">
-                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/488006064.png" alt="成果照片"
+                            <img src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3357/722985209.png" alt="成果照片"
                                 class="rounded">
                         </div>
                     </div>
@@ -62,14 +62,16 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-10">
-                    <h1 class="content-title">原住民安居構築與綠色樂業推動計畫</h1>
+                    <h1 class="content-title">在地「富育」計畫 - 牡丹鄉</h1>
                 </div>
                 <div class="col-lg-2"></div>
                 <div class="col-lg-10">
-                    <p class="comtent-text ellipsis-line-4">在新竹縣尖石鄉海拔 1200 公尺至1600公尺森林山區,後山的農村部落裡,維持著非常
-                        良好景觀及自然資源族人多為泰雅族群從事農耕生活,致力於推廣內涵泰雅智慧的自然
-                        友善農業。但因為過去社群組織停頓、山地理、交通運輸及資源不足等限制,產業的維
-                        持及生活文化受到各種現實考驗...</p>
+                    <p class="comtent-text ellipsis-line-4">在地富育計畫乃針對屏東縣牡丹鄉學童、青少年、青壯年與長者的全方位照顧方案。服
+                        務內容在教育面以人為中心思考，提供各階層教育需求；在文化面著重排灣族文化傳
+                        承與發揚；在安養面以協助當地就業與獨居長者照顧為核心；在自然面是盤整當地植
+                        物與農特產品，做為整體經濟規劃基礎。為圓滿此計畫在校內推動「專業課程融入服務
+                        學習」，透過專業整合，將師生投入偏鄉服務，配合企業資源引進，讓學校、偏鄉與企
+                        業之結合成為成功之模式。</p>
                 </div>
             </div>
         </div>
@@ -88,7 +90,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <a href="#">
+                    <a href="https://osausr.ntut.edu.tw/p/426-1001-36.php?Lang=zh-tw">
                         <i class="fas fa-arrow-right text-more text-more-odd">
                             <span style="font-family: Arial; font-weight: normal;"> MORE</span>
                         </i>
