--- a/Desktop/關於我們/組織架構.html
+++ b/Desktop/關於我們/組織架構.html
@@ -1,4 +1,4 @@
-<section id="Section_Organization">
+<section id="Section_Organization" class="float-on-bg bg-white">
     <p id="organizationTitle" class="float-on-bg bg-white w-100 text-center m-0">組織架構</p>
     <div id="organizationContainer" class="float-on-bg bg-white">
         <div id="organizationTeamContainer" class="row align-items-center">
@@ -56,10 +56,10 @@
     }
 
     #organizationTitle {
+        padding-top: 150px;
         font-size: 45px;
         line-height: 1.33;
         color: #4998b2;
-        padding-top: 200px;
     }
 
     #organizationTeamContainer {
@@ -81,10 +81,6 @@
     }
 
     @media (min-width: 1366px) {
-        #organizationTitle {
-            padding-top: 540px;
-        }
-
         #organizationTeamContainer {
             padding: 42px 243px 0;
         }
