--- a/Desktop/公告/客製公告CSS.html
+++ b/Desktop/公告/客製公告CSS.html
@@ -37,6 +37,7 @@
         text-decoration: none;
         cursor: pointer;
         background-color: transparent;
+        text-decoration: none !important;
     }
 
     .mdate {
