--- a/Desktop/關於我們/組織架構.html
+++ b/Desktop/關於我們/組織架構.html
@@ -2,7 +2,7 @@
     <p id="organizationTitle" class="float-on-bg bg-white w-100 text-center m-0">組織架構</p>
     <div id="organizationContainer" class="float-on-bg bg-white">
         <div id="organizationTeamContainer" class="row align-items-center">
-            <div class="table-responsive col-12 col-lg-7 col-xl-6">
+            <div class="table-responsive col-12 col-lg-7 col-xl-6 mb-5 mb-xl-0">
                 <table id="menberTable" class="table table-borderless">
                     <tbody>
                         <tr>
