--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊主題.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊主題.html
@@ -1,13 +1,13 @@
-<div class="collaborative-partner-background">
-    <div class="collaborative-partner-background-content-container w-100 text-center">
-        <h1 class="collaborative-partner-background-content-sub-title">109-110學年度</h1>
-        <hr class="collaborative-partner-background-content-hr">
-        <h1 class="collaborative-partner-background-content-title  animate__animated animate__jello">木創文化攪動深根計畫</h1>
-        <span class="collaborative-partner-background-content-button text-center">計畫網站</span>
+<div id="collaborativePartnerBackground">
+    <div id="collaborativePartnerBackgroundContentContainer" class="w-100 text-center">
+        <h1 id="collaborativePartnerBackgroundContentSubTitle"></h1>
+        <hr id="collaborativePartnerBackgroundContentHr">
+        <h1 id="collaborativePartnerBackgroundContentTitle" class="animate__animated animate__jello"></h1>
+        <span id="collaborativePartnerBackgroundContentButton" class="text-center">計畫網站</span>
     </div>
 </div>
 <style type="text/css">
-    .collaborative-partner-background {
+    #collaborativePartnerBackground {
         background: url(https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/438398622.png);
         background-size: cover;
         background-repeat: no-repeat;
@@ -16,7 +16,7 @@
         height: 636px;
     }
 
-    .collaborative-partner-background-content-container {
+    #collaborativePartnerBackgroundContentContainer {
         font-family: "SegoeUI";
         position: absolute;
         color: #ffffff;
@@ -24,21 +24,21 @@
     }
 
     @media (min-width: 767px) {
-        .collaborative-partner-background-content-container {
+        #collaborativePartnerBackgroundContentContainer {
             top: 337px;
         }
     }
 
-    .collaborative-partner-background-content-title {
+    #collaborativePartnerBackgroundContentTitle {
         margin-bottom: 45px;
         font-size: 50px;
     }
 
-    .collaborative-partner-background-content-sub-title {
+    #collaborativePartnerBackgroundContentSubTitle {
         font-size: 30px;
     }
 
-    .collaborative-partner-background-content-hr {
+    #collaborativePartnerBackgroundContentHr {
         width: 597px;
         height: 0;
         border: solid 1px white;
@@ -46,15 +46,21 @@
         margin-bottom: 19.5px;
     }
 
-    .collaborative-partner-background-content-button {
+    #collaborativePartnerBackgroundContentButton {
         cursor: pointer;
         border: solid 1px white;
         font-size: 20px;
         padding: 8px 26px;
     }
 
-    .collaborative-partner-background-content-button:hover {
+    #collaborativePartnerBackgroundContentButton:hover {
         color: black;
         background: #fff;
     }
 </style>
+<script>
+    $(function () {
+        $('#collaborativePartnerBackgroundContentContainer').find('#collaborativePartnerBackgroundContentTitle').text(collaborativePartnerMain.title || '待新增主題');
+        $('#collaborativePartnerBackgroundContentContainer').find('#collaborativePartnerBackgroundContentSubTitle').text(collaborativePartnerMain.year || '待新增年度');
+    });
+</script>
