--- a/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
+++ b/Desktop/合作團隊/木創文化攪動深根計畫/合作團隊成員.html
@@ -1,62 +1,7 @@
 <div class="collaborative-partner-member-container">
     <h1 class="w-100 text-center collaborative-partner-member-title">團 隊 成 員</h1>
-    <div class="collaborative-partner-member-content-container w-100">
-        <div class="row text-center justify-content-start">
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(0)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg"
-                        alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">吳舜堂 教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：通識教務中心</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(1)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337219271.jpg"
-                        alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">張若菡 副教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(2)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/763241224.jpg"
-                        alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">林承謙 副教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：商業設計系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(3)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/836721579.png"
-                        alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">范政揆 副教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(4)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png"
-                        alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">陳殿禮 教授</p>
-                    <p class="collaborative-partner-member-content-department">單位：工業設計系</p>
-                </div>
-            </div>
-            <div class="collaborative-partner-member-content col-md-6 col-xl-3">
-                <div class="d-flex flex-column align-items-center" data-aos="flip-left"
-                    onclick="showPartnerMemberModal(5)" style="cursor: pointer;">
-                    <img class="member-avatar" src="https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png"
-                        alt="成員照片" width="174" height="174">
-                    <p class="collaborative-partner-member-content-name">鍾盛賜 教師</p>
-                    <p class="collaborative-partner-member-content-department">單位：台中市立東勢高工家具設計科</p>
-                </div>
-            </div>
-        </div>
+    <div id="collaborativePartnerMemberContentContainer" class="w-100">
+        <div id="collaborativePartnerMemberContentWrapper" class="row text-center justify-content-start"></div>
     </div>
 </div>
 
@@ -73,12 +18,12 @@
         line-height: 1.33;
     }
 
-    .collaborative-partner-member-content-container {
+    #collaborativePartnerMemberContentContainer {
         padding: 0 50px 92px;
     }
 
     @media (min-width: 1366px) {
-        .collaborative-partner-member-content-container {
+        #collaborativePartnerMemberContentContainer {
             padding: 0 250px 92px;
         }
     }
@@ -106,72 +51,100 @@
         border-radius: 50%;
     }
 </style>
+<style>
+    /* 跳出視窗 CSS */
+    #template-member-info-warpper {
+        margin-top: 100px;
+    }
+
+    #template-content-warpper {
+        margin: 15px;
+    }
+
+    @media (min-width: 767px) {
+        #template-content-warpper {
+            margin: 60px;
+        }
+    }
+
+    @media (min-width: 1366px) {
+        #template-content-warpper {
+            margin: 120px;
+        }
+    }
+
+    #personAvatar {
+        max-width: 174px;
+    }
+
+    #personName {
+        font-size: 35px;
+        line-height: 1.34;
+        letter-spacing: 1.75px;
+        font-family: 'SegoeUI';
+        color: #000000;
+        white-space: nowrap;
+    }
+
+    #personFrom {
+        font-size: 25px;
+        line-height: 1.4;
+        letter-spacing: 1.25px;
+        color: #707070;
+        white-space: pre-line;
+    }
+
+    #personSkill,
+    #personIntro {
+        font-size: 25px;
+        font-family: 'SegoeUI';
+        color: #707070;
+        letter-spacing: 3px;
+        line-height: 1.6;
+    }
+</style>
 
 <script>
-    const collaborativePartnerMember = [
-        {
-            'avatar': 'https://osausr.rpage.ntut.edu.tw/var/file/1/1001/img/3360/259843898.jpg',
-            'name': '吳舜堂　老師',
-            'from': `待補`,
-            'skill': '待補。',
-            'intro': '待補。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/337219271.jpg',
-            'name': '張若菡　老師',
-            'from': `待補`,
-            'skill': '待補。',
-            'intro': '待補。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3360/763241224.jpg',
-            'name': '林承謙　老師',
-            'from': `待補`,
-            'skill': '待補。',
-            'intro': '待補。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3380/836721579.png',
-            'name': '范政揆 副教授',
-            'from': `國立臺北科技大學\n創新設計研究所碩士`,
-            'skill': '創新設計、設計策略、永續設計、醫療與健康產品開發',
-            'intro': '范政揆副教授擔任創新設計與知識管理研發中心主任，於創新產品設計、創新與設計策略、醫療健康照護、永續發展和跨域整合上多有著墨，歷年來指導學生榮獲國內外百項設計獎，近年致力於循環經濟與永續設計，從跨域整合的角度結合企業 CSR 和大學的 USR 的能量，以聯合國永續發展的 17 項指標為標的,期望透過Design for SDGs 的手法，讓創新與設計來改變社會與世界。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/11.png',
-            'name': '陳殿禮 教授',
-            'from': `待補`,
-            'skill': '待補。',
-            'intro': '待補。',
-        },
-        {
-            'avatar': 'https://osausr.ntut.edu.tw/var/file/1/1001/img/3371/12.png',
-            'name': '鍾盛賜 教師',
-            'from': `待補`,
-            'skill': '待補。',
-            'intro': '待補。',
+    $(function () {
+        createCollaborativePartnerMembers()
+    });
+
+    function createCollaborativePartnerMembers() {
+        if (!collaborativePartnerMember.length) { return }
+        for (let i = 0; i < collaborativePartnerMember.length; i++) {
+            // 複製 團隊成員 模板
+            const el = $('#template').find('.collaborative-partner-member-content').clone();
+            // 設定 團隊成員 內容 & 事件
+            $(el).find('.member-avatar').attr("src", collaborativePartnerMember[i].avatar);
+            $(el).find('.collaborative-partner-member-content-name').text(collaborativePartnerMember[i].name);
+            $(el).find('.collaborative-partner-member-content-department').text(`單位： ${collaborativePartnerMember[i].organization}`);
+            $(el).click(function () { showPartnerMemberModal(i) });
+            // 新增入 UI
+            $('#collaborativePartnerMemberContentWrapper').append(el);
         }
-    ];
+    }
 
     function showPartnerMemberModal(index) {
-        if (!collaborativePartnerMember[index]) {
-            return;
+        if (!collaborativePartnerMember[index]) { return }
+
+        if (collaborativePartnerMember[index].link) {
+            // 不跳介紹改另開連結網站
+            window.open(collaborativePartnerMember[index].link);
+        } else {
+            $('#collaborative-partner-member-template').find('#personAvatar').attr("src", collaborativePartnerMember[index].avatar);
+            $('#collaborative-partner-member-template').find('#personName').text(collaborativePartnerMember[index].name);
+            $('#collaborative-partner-member-template').find('#personFrom').text(collaborativePartnerMember[index].from);
+            $('#collaborative-partner-member-template').find('#personSkill').text(collaborativePartnerMember[index].skill);
+            $('#collaborative-partner-member-template').find('#personIntro').text(collaborativePartnerMember[index].intro);
+
+            Swal.fire({
+                title: '',
+                width: $(window).width() > 1023 ? '60vw' : '100vw',
+                html: $('#collaborative-partner-member-template').html(),
+                showCloseButton: true,
+                showConfirmButton: false,
+                showCancelButton: false,
+            });
         }
-
-        $('#collaborative-partner-member-template').find('#personAvatar').attr("src", collaborativePartnerMember[index].avatar);
-        $('#collaborative-partner-member-template').find('#personName').text(collaborativePartnerMember[index].name);
-        $('#collaborative-partner-member-template').find('#personFrom').text(collaborativePartnerMember[index].from);
-        $('#collaborative-partner-member-template').find('#personSkill').text(collaborativePartnerMember[index].skill);
-        $('#collaborative-partner-member-template').find('#personIntro').text(collaborativePartnerMember[index].intro);
-
-
-        Swal.fire({
-            title: '',
-            width: $(window).width() > 1023 ? '60vw' : '100vw',
-            html: $('#collaborative-partner-member-template').html(),
-            showCloseButton: true,
-            showConfirmButton: false,
-            showCancelButton: false,
-        });
     }
 </script>
